...
        </ThemedView>

        <ThemedView style={styles.addressContainer}>
          <ThemedText type="paragraph" testID="AddressLabel" style={styles.addressLabel}>
            Address:
          </ThemedText>
          <TouchableOpacity testID="CopyAddressButton" onPress={handleCopyAddress} style={styles.addressTextContainer} disabled={!address}>
            {isLoading ? (
              <ThemedText type="paragraph" style={styles.addressText}>
                Loading...
              </ThemedText>
            ) : (
              <ThemedText type="paragraph" testID="AddressText" style={styles.addressText}>
...
