appId: com.layerzwallet.mobile
---
- runFlow: subflows/wallet-creation.yml

# run for networks which have unique receive screens: bitcoin, rootstock (evm), ark, liquid (both liquid & lightning)
# all other networks reuse receive screens from those. generic receive address generation for specific wallet types
# should be done in selftest
- evalScript: ${output.networks = ['liquid', 'bitcoin', 'rootstock', 'spark']}
- repeat:
    while:
      true: ${output.networks.length > 0}
    commands:
      # switch to the next network
      - runFlow:
          file: subflows/network-switch.yml
          env:
            NETWORK: ${output.networks.shift()}
      # Wait for network switch to complete
      - waitForAnimationToEnd
      - assertVisible:
          id: 'SendButton'
      - assertVisible:
          id: 'ReceiveButton'
      - tapOn:
          id: 'ReceiveButton'
      - extendedWaitUntil:
          notVisible: 'Loading address...'
          timeout: 60000
      # Verify all basic UI components rendered successfully with an actual address.
      - assertVisible:
          id: 'QrContainer' # This will fail if the address was not obtained
      - scroll
      - assertVisible:
          id: 'CopyAddressButton' # expand later with ui feedback
      - assertVisible:
          id: 'ShareButton'
      - runFlow: subflows/back.yml

# for Lightning network we now go directly to ReceiveOnLightningAddress screen, then tap "Receive with amount" to get invoice flow
- evalScript: ${output.networks = ['lightning']} # ,'lightningtest'
- repeat:
    while:
      true: ${output.networks.length > 0}
    commands:
      # switch to the next network
      - runFlow:
          file: subflows/network-switch.yml
          env:
            NETWORK: ${output.networks.shift()}
      # Wait for network switch to complete
      - waitForAnimationToEnd
      - assertVisible:
          id: 'ReceiveButton'
      - assertVisible:
          id: 'SendButton'
      - tapOn:
          id: 'ReceiveButton'
      - extendedWaitUntil:
          notVisible: 'Loading address...'
          timeout: 60000
      # Verify all basic UI components rendered successfully with Lightning address.
      - extendedWaitUntil:
          visible:
            id: 'LightningAddressQrContainer' # This will fail if the address was not obtained
          timeout: 60000
      - assertVisible:
          id: 'LightningAddressButton' # Tappable address
      - scroll
      - assertVisible:
          id: 'ShareButton'
      - assertVisible:
          id: 'ReceiveOnLightningAddressWithAmountButton' # Button to receive with amount
      # Tap on "Receive with amount" to get the invoice generation flow
      - tapOn:
          id: 'ReceiveOnLightningAddressWithAmountButton'
      - waitForAnimationToEnd
      - runFlow: subflows/sleep.yml # modal button can appear with slight delay
      - extendedWaitUntil:
          visible: 'Layer to receive on'
          timeout: 15000
      - runFlow:
          when:
            visible:
              id: 'ReceiveOnSparkButton'
          commands:
            - tapOn:
                id: 'ReceiveOnSparkButton'
      - runFlow:
          when:
            visible: 'Receive on Spark'
          commands:
            - tapOn: 'Receive on Spark'
      - extendedWaitUntil:
          visible:
            id: 'ReceiveLightningAmountInput'
          timeout: 9000
      - extendedWaitUntil:
          notVisible: 'Initializing...'
          timeout: 15000
      - tapOn:
          id: 'ReceiveLightningAmountInput'
      - inputText:
          text: '100000'
      - tapOn:
          id: 'GenerateButton'
      - extendedWaitUntil:
          notVisible: 'Generating...'
          timeout: 60000

      # WTF. Android shows "Allow Android Keyboard(AOSP) to access your contacts?". We need to close it
      - runFlow:
          when:
            visible:
              text: 'Allow Android Keyboard.*'
          commands:
            - tapOn: 'allow'
            - tapOn:
                id: 'GenerateButton'
            - extendedWaitUntil:
                notVisible: 'Generating...'
                timeout: 60000

      # Verify all basic UI components rendered successfully with an actual invoice.
      - assertVisible:
          id: 'LNQrContainer' # This will fail if the invoice was not obtained
      - scroll
      - assertVisible:
          id: 'CopyInvoiceButton' # expand later with ui feedback
      - assertVisible:
          id: 'LNShareButton'
      - runFlow: subflows/back.yml
      - runFlow: subflows/back.yml
